--- a/templates/Utilisateur/inscription.html
+++ b/templates/Utilisateur/inscription.html
@@ -94,7 +94,7 @@
                 </div>
                 <div class="col-12 text-center mt-4">
                   <span class="text-muted">Already have an account?
-                    <a href="{% url 'login' %}" title="Sign in" class="text-secondary">Sign in here</a></span>
+                    <a href="{% url 'login' %}" title="Sign in" class="text-secondary">Sign In here</a></span>
                 </div>
 
 
