--- a/templates/administrateur/users/inscription.html
+++ b/templates/administrateur/users/inscription.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="content-wrapper" style="margin-top:Opx">
-  <div class="content"><!-- For Components documentaion -->
+  <div class="content"><!-- For Components documentation -->
     <div class="card card-default">
       <div class="px-6 py-4">
         <div class="">
@@ -17,7 +17,7 @@
 
 
               <div class="col-12 text-center mb-5">
-                <h1>Inscription des utilisateur</h1>
+                <h1>Inscription des utilisateurs</h1>
 
               </div>
               {% if error %}
