--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 
 <div class="content-wrapper">
   <div class="content">                
-          <!-- Top Statistics -->
+          <!-- Top Stats -->
           <div class="row">
             <div class="col-xl-3 col-sm-6">
               <div class="card card-default card-mini">
