--- a/templates/Etudiant/modifier.html
+++ b/templates/Etudiant/modifier.html
@@ -123,7 +123,7 @@
                   </div>
                 </div>
               </div>
-              <!-- End Row -->
+              <!-- End Rw -->
             </div>
           </div>
         </div>
