--- a/templates/Etudiant/projet/index.html
+++ b/templates/Etudiant/projet/index.html
@@ -62,7 +62,7 @@
     <div class="modal-dialog modal-dialog-centered modal-lg">
     <div class="modal-content">
         <div class="modal-header">
-            <h5 class="modal-title  fw-bold" id="addUserLabel">Invite Friend's</h5>
+            <h5 class="modal-title  fw-bold" id="addUserLabel">Friends Invite</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
