--- a/templates/Etudiant/soumission/supprimer.html
+++ b/templates/Etudiant/soumission/supprimer.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-Etes vous sur de vouloir supprimer le projet Soumis
+Etes vous sur de vouloir supprimer ce projet ?
 <p class="alert alert-success">{{ message }}</p> 
 <form method="POST" action="" enctype="multipart/form-data">
     {% csrf_token %}
