--- a/templates/administrateur/cours/modifier.html
+++ b/templates/administrateur/cours/modifier.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="content-wrapper" style="margin-top:Opx">
-        <div class="content"><!-- For Components documentaion -->
+        <div class="content"><!-- For Components documentation -->
           <div class="card card-default">
             <div class="px-6 py-4">
               <div class="">
