--- a/templates/administrateur/users/modifier.html
+++ b/templates/administrateur/users/modifier.html
@@ -119,7 +119,7 @@
                   </div>
                 </div>
               </div>
-              <!-- End Row -->
+              <!-- End Rw -->
             </div>
           </div>
         </div>
