--- a/templates/Enseignant/profil.html
+++ b/templates/Enseignant/profil.html
@@ -59,7 +59,7 @@
                             <div class="card">
                                 <div class="card-body">
                                     <div class="d-flex align-items-center">
-                                        <div class="w120"><p><strong  style="font-size: 20px;">votre Email</strong></p></div>
+                                        <div class="w120"><p><strong  style="font-size: 20px;">Votre Email</strong></p></div>
                                         <div class="flex-fill ms-3 text-truncate">
                                             <h4 class="mb-0  fs-6 text-truncate">{{ utilisateur.email }}</h4>
                                             <div class="d-flex align-items-center">
