--- a/templates/Etudiant/projet/index.html
+++ b/templates/Etudiant/projet/index.html
@@ -73,7 +73,7 @@
                 </div>
             </div>
             <div class="members_list">
-                <h6 class="fw-bold ">Members of e-Learn</h6>
+                <h6 class="fw-bold ">Members of FastLearning</h6>
                 <ul class="list-unstyled list-group list-group-custom list-group-flush mb-0">
                    
                 </ul>
