--- a/templates/_partiels/nav.html
+++ b/templates/_partiels/nav.html
@@ -8,7 +8,7 @@
 
       <div class="header-left">
           <a href="index.html" class="logo" style="font-size: 30px;">
-              Swift Academy
+            FastLearning
           </a>
           <a href="index.html" class="logo logo-small">
               <img src="{% static 'assets/img/logo-small.png' %}" alt="Logo" width="30" height="30">
@@ -97,15 +97,15 @@
                   </li>
                   <li class=" active">
                       <a href="{% url 'afficher_profil' %}"><i class="feather-grid"></i> <span> Profil</span> </a>
-                      <a href="{% url 'soumis' %}"><i class="feather-grid"></i> <span> Projet Soumis</span> </a>
+                      <a href="{% url 'soumis' %}"><i class="feather-grid"></i> <span> Projets Soumis</span> </a>
                       
                   </li>
                   <li class="submenu">
-                      <a href="#"><i class="fas fa-graduation-cap"></i> <span>Projet</span> <span
+                      <a href="#"><i class="fas fa-graduation-cap"></i> <span>Projets</span> <span
                               class="menu-arrow"></span></a>
                       <ul>
                           <li><a href="{% url 'ajouter_projet' %}">Ajouter un Projet</a></li>
-                          <li><a href="{% url 'liste_projet' %}">liste des Projets</a></li>
+                          <li><a href="{% url 'liste_projet' %}">Liste des Projets</a></li>
                          
                       </ul>
                   </li>
