--- a/templates/_partiels/navEtudiant.html
+++ b/templates/_partiels/navEtudiant.html
@@ -8,7 +8,7 @@
 
       <div class="header-left">
           <a href="index.html" class="logo" style="font-size: 30px;">
-              Swift Academy
+            FastLearning
           </a>
           <a href="index.html" class="logo logo-small">
               <img src="{% static 'assets/img/logo-small.png' %}" alt="Logo" width="30" height="30">
