--- a/templates/administrateur/cours/modifier.html
+++ b/templates/administrateur/cours/modifier.html
@@ -14,7 +14,7 @@
               <div class="">
                 <div class="card-header py-3 px-0  align-items-center  justify-content-between border-bottom">
                             <h3 class=" fw-bold flex-fill mb-3" style="border-bottom: 4px solid red; ">Administrateur</h3>
-                            <h4 class="fw-bold flex-fill mb-3" style="text-align: center; " >Modifier un Cour</h4>
+                            <h4 class="fw-bold flex-fill mb-3" style="text-align: center; " >Modifier un Cours</h4>
                             
                             <p class="alert alert-success">{{ message }}</p> 
                             <form method="post"   enctype="multipart/form-data">
