--- a/templates/administrateur/users/utilisateur_enseignant.html
+++ b/templates/administrateur/users/utilisateur_enseignant.html
@@ -9,7 +9,7 @@
                     <div class="card-header py-3 px-0 d-flex align-items-center  justify-content-between border-bottom">
                         <h3 class=" fw-bold flex-fill mb-0">Administrateur</h3>
                         <div class="dropdown px-2">
-                            <H3>Liste des  Enseignant</H3>
+                            <H3>Liste des  Enseignants</H3>
                         </div>
                         
                     </div>
