--- a/templates/Enseignant/Projet/supprimer.html
+++ b/templates/Enseignant/Projet/supprimer.html
@@ -2,13 +2,13 @@
 
 {% block content %}
 
-Etes vous sur de vouloir supprimer le projet {{ intitule }}
+Etes vous certain de vouloir supprimer le projet {{ intitule }}
 <p class="alert alert-success">{{ message }}</p> 
 <form method="POST" action="" enctype="multipart/form-data">
     {% csrf_token %}
     
-    <button type="submit" class="btn btn-danger"> supprimer</button>
-    <a class="btn btn-primary" href="{% url 'liste_projet' %}">cancel</a> 
+    <button type="submit" class="btn btn-danger"> Supprimer</button>
+    <a class="btn btn-primary" href="{% url 'liste_projet' %}">Cancel</a> 
 </form>
 
 {% endblock %}
