--- a/templates/Etudiant/profil.html
+++ b/templates/Etudiant/profil.html
@@ -190,7 +190,7 @@
             <div class="col-xl-4 col-lg-12 col-md-12">
                 <div class="card mb-3">
                     <div class="card-header py-3">
-                        <h6 class="mb-0 fw-bold ">Mon nom d'utilisateur est : {{ utilisateur.username }} </h6>
+                        <h6 class="mb-0 fw-bold ">Votre nom d'utilisateur est : {{ utilisateur.username }} </h6>
                     </div>
                     <div class="card-body">
                         <div id="apex-radar-multiple-series" class="line-color"></div>
