--- a/templates/_partiels/navAdministrateur.html
+++ b/templates/_partiels/navAdministrateur.html
@@ -8,7 +8,7 @@
 
       <div class="header-left">
           <a href="index.html" class="logo" style="font-size: 30px;">
-              Swift Academy
+            FastLearning
           </a>
           <a href="index.html" class="logo logo-small">
               <img src="{% static 'assets/img/logo-small.png' %}" alt="Logo" width="30" height="30">
@@ -105,7 +105,7 @@
                               class="menu-arrow"></span></a>
                       <ul>
                           <li><a href="{% url 'inscription' %}">Ajouter un Utilisateur</a></li>
-                          <li><a href="{% url 'liste_utilisateur' %}">liste des Utilisateurs</a></li>
+                          <li><a href="{% url 'liste_utilisateur' %}">Liste des Utilisateurs</a></li>
                          
                       </ul>
                   </li>
@@ -113,8 +113,8 @@
                       <a href="#"><i class="fas fa-chalkboard-teacher"></i> <span>Cours</span> <span
                               class="menu-arrow"></span></a>
                       <ul>
-                          <li><a href="{% url 'ajouter_cour' %}">Ajouter Cour</a></li>
-                          <li><a href="{% url 'liste_cour' %}">Liste cours</a></li>
+                          <li><a href="{% url 'ajouter_cour' %}">Ajouter Cours</a></li>
+                          <li><a href="{% url 'liste_cour' %}">Liste Cours</a></li>
 
                       </ul>
                   </li>
