--- a/templates/administrateur/cours/ajouter.html
+++ b/templates/administrateur/cours/ajouter.html
@@ -16,7 +16,7 @@
                   <h3 class=" fw-bold flex-fill mb-3" style="border-bottom: 4px solid red; ">Administrateur</h3>
                   
                            
-                            <h4 class="fw-bold flex-fill mb-3" style="text-align: center; " >Ajouter un Cour</h4>
+                            <h4 class="fw-bold flex-fill mb-3" style="text-align: center; " >Ajouter un Cours</h4>
                             <a href="{% url 'liste_cour' %}" style="width: 250px; margin-left:400px;margin-bottom:5px" class="btn btn-info"><strong style="font-size: 20px; ">Listes Cour</a>
                             <p class=" alert-success">{{ message }}</p> 
                             <form method="post"   enctype="multipart/form-data">
